Edge:
* Cast PostgreSQL timestamps to their floored integers (instead of rounding up).
* Don't add array_accum to PostgreSQL v80311 (8.3.?) or newer.

2.0.12 - May 14th 2012
* STI fix when generating WHERE clauses for sql_query.
* 1.4.12 changes.

2.0.11 - January 2nd 2012
* Call #all on search results to force population of results, matching ActiveRecord::Relation#all in essence. (Adrian Macneil).
* 1.4.11 changes.

2.0.10 - November 4th 2011
* 1.4.10 changes.

2.0.9 - October 10th 2011
* 1.4.9 changes (fixed invalid gemspec).

2.0.8 - October 10th 2011
* Actually looking at Rails engines paths for models (Eduardo Casanova).
* Ensuring associations for acts-as-taggable-on are tweaked for Rails 3.1 (Anthony).
* Bug fix for association collection proxies in Rails 3.1 (Pavel Forkert).
* References all known Rails model paths - better for Rails 3 Engines.
* Don't reload I18n anymore - the load order isn't an issue in Rails 3 or 3.1.
* Fixing attribute source queries for Rails 3.1.
* 1.4.8 changes

2.0.7 - August 29th 2011
* Making sure lib directory is actually a part of the gem. Oops.

2.0.6 - August 28th 2011
* Don't change superclass index definitions (otherwise sibling subclasses can end up with each others' index definitions).
* Improved scope support (Andrew White).
* Fixed association-filtered searches for Rails 3.1 (Andrew White).
* Fixed polymorphic association support for Rails 3.1 (Jonathan Viney).
* 1.4.7 changes.

2.0.5 - May 25th 2011
* Railtie equivalent for Sinatra.
* Rails 3.1 support (Florent Piteau).
* 1.4.6 changes.

2.0.4 - May 12th 2011
* Only determine Sphinx version when initializing Thinking Sphinx, instead of upon require.
* Still execute logged blocks for searching even when logging isn't enabled.
* 1.4.5 changes.

2.0.3 - April 3rd 2011
* 1.4.4 changes.

2.0.2 - January 13th 2011
* Improvement to loading the environment via Rake (Brenton Fletcher).
* 1.4.2 changes.
* 1.4.1 changes.

2.0.1 - November 19th 2011
* Intermittent as_json bug fix.