@@ -1,4 +1,5 @@
 Edge:
+* Add support for association-filtered faceting (Andrew White).
 * Cast PostgreSQL timestamps to their floored integers (instead of rounding up).
 * Don't add array_accum to PostgreSQL v80311 (8.3.?) or newer.
 
